--- a/aidea/static/aidea/design.css
+++ b/aidea/static/aidea/design.css
@@ -25,7 +25,7 @@
 
 #free-input {
     margin-top: 10px;
-    padding: 5px;
+    padding: 10px;
     width: 100%;
     /* paddingやborderが原因ではみ出さないようにするためのおまじない */
     box-sizing: border-box; 
@@ -86,8 +86,13 @@ html, body{
 #design_point{
     font-size: 20px;
     margin-bottom: 30px;
+    margin-left: 30px;
 }
 
 #finish-btn{
     font-size: 30px;
+}
+
+#default_question{
+    margin-top: 20px;
 }
