--- a/aidea/templates/aidea/index.html
+++ b/aidea/templates/aidea/index.html
@@ -91,8 +91,8 @@
           <button class="btn btn-outline-dark my-3" onclick="showModal(
             '会津塗', 
             '{% static "aidea/images/aidu3.jpg" %}', 
-            '吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。',
-            ['特徴１', '特徴２', '特徴３']
+            '会津塗は、福島県の西部に位置する会津地方に江戸時代から伝わる伝統技法で作られた工芸品です。特徴として、縁起のいい意匠や多彩な加飾の美しさが挙げられます。他の漆器に比べて、浅く細い溝を掘るため装飾は柔らかな表情を感じさせます。',
+            ['会津地方に江戸時代から伝わる工芸品', '縁起のいい意匠や多彩な加飾の美しさ', '浅く細い溝を掘るため装飾は柔らかな表情が感じられる']
             )">
                 <div class="area pt-3 pb-3">
                     <img src="{% static 'aidea/images/aidu3.jpg' %}" alt="仮画像" class="img-fluid w-50 h-50 pb-3 img"></br>
@@ -107,8 +107,8 @@
           <button class="btn btn-outline-dark my-3" onclick="showModal(
             '有田焼', 
             '{% static "aidea/images/arita.webp" %}', 
-            '吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。',
-            ['特徴１', '特徴２', '特徴３']
+            '有田焼は、佐賀県有田町とその周辺地域で17世紀に日本で初めて作られた磁器です。特徴は、透き通るように白い滋肌と呉須で描いた染付け、ガラス質の上絵具を用いた華やかな赤絵です。耐久性が高く、美術品から日用品まで様々なものが生産されています。',
+            ['佐賀県有田町とその周辺地域で日本で初めて作られた磁器', '耐久性が高い', '美術品から日用品まで生産']
             )">
                 <div class="area pt-3 pb-3">
                     <img src="{% static 'aidea/images/arita.webp' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
@@ -122,8 +122,8 @@
           " onclick="showModal(
             '九谷焼', 
             '{% static "aidea/images/kutani2.webp" %}', 
-            '吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれは書生という人間中で一番獰悪な種族であったそうだ。この書生というのは時々我々を捕えて煮て食うという話である。しかしその当時は何という考もなかったから別段恐しいとも思わなかった。',
-            ['特徴１', '特徴２', '特徴３']
+            '九谷焼は、石川県南部で作られている陶磁器です。山水、花鳥など絵画的で大胆な「上絵付け」による装飾が美しく、皿や茶碗のほか装飾品としても広く愛されています。九谷焼は、伝統を礎に時代の流れを汲みながら、現代においても進化し続けています',
+            ['石川県南部で作られている陶磁器', '絵画的で大胆な「上絵付け」による装飾が美しい', '現代においても進化し続けている']
             )">
                 <div class="area pt-3 pb-3">
                     <img src="{% static 'aidea/images/kutani_sq1.jpg' %}" alt="仮画像" class="w-50 h-50 pb-3 img"></br>
