core/index.htmlからの遷移

--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -58,6 +58,6 @@
         <button type="submit">次へ</button>
     </form>
 
-    <p><a href="{% url 'home' %}">トップに戻る</a></p>
+    <a href="javascript:history.back()">戻る</a>
 </body>
 </html>
