--- a/accounts/templates/accounts/user_list.html
+++ b/accounts/templates/accounts/user_list.html
@@ -41,16 +41,6 @@
         </ul>
     {% endfor %}
 
-    {% if user.is_authenticated %}
-        {% if user.profile.role == "supporter" %}
-            <p><a href="{% url 'supporter_dashboard' %}">トップに戻る</a></p>
-        {% elif user.profile.role == "creator" %}
-            <p><a href="{% url 'creator_dashboard' %}">トップに戻る</a></p>
-        {% elif user.profile.role == "craftsman" %}
-            <p><a href="{% url 'craftsman_dashboard' %}">トップに戻る</a></p>
-        {% endif %}
-    {% else %}
-        <p><a href="{% url 'home' %}">トップに戻る</a></p>
-    {% endif %}
+    <a href="javascript:history.back()">戻る</a>
 </body>
 </html>
