--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -39,7 +39,7 @@
 
     // 2. 3秒後（フェードアウトが完全に終わった後）に画面遷移を実行
     setTimeout(function() {
-        window.location.href = "{% url 'user_list' %}"; 
+        window.location.href = "{% url 'enter' %}"; 
     }, totalDelay); 
     </script>
 </body>
