--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -19,5 +19,6 @@
 
     <!-- 新規アカウント作成リンク -->
     <p><a href="{% url 'signup' %}">新規アカウント作成</a></p>
+    <a href="javascript:history.back()">戻る</a>
 </body>
 </html>
