--- a/accounts/templates/accounts/profile_setup.html
+++ b/accounts/templates/accounts/profile_setup.html
@@ -19,6 +19,21 @@
             {% endfor %}
         </p>
 
+        <!-- 役割選択 -->
+        <p>
+            {{ form.role.label_tag }}<br>
+            {% if form.instance.role %}
+                {{ form.instance.get_role_display }}
+                <input type="hidden" name="{{ form.role.name }}" value="{{ form.instance.role }}">
+            {% else %}
+                {{ form.role }}
+            {% endif %}
+
+            {% for error in form.role.errors %}
+                <span style="color:red">{{ error }}</span><br>
+            {% endfor %}
+        </p>
+
         <!-- アイコン -->
         <p>
             <label for="id_icon">アイコン画像：</label><br>
@@ -53,6 +68,6 @@
     </form>
 
     <br>
-    <a href="{% url 'mypage' %}">戻る</a>
+    <a href="javascript:history.back()">戻る</a>
 </body>
 </html>
