--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -13,5 +13,7 @@
 
 <div>
     <a href="{% url 'product:product_list' %}">一覧に戻る</a>
+    |
+    <a href="{% url 'product:product_delete' product.pk %}" class="text-danger">削除</a>
 </div>
 {% endblock %}
