--- a/accounts/templates/accounts/enter.html
+++ b/accounts/templates/accounts/enter.html
@@ -9,6 +9,43 @@
     <link rel="stylesheet" href="{% static 'accounts/enter.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-
-    <a href="{% url 'signup' %}">アカウント作成</a><br>
-    <a href="{% url 'login' %}">ログイン</a>
+<body class="d-flex flex-column justify-content-center  vh-100">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center mt-5 my-4">
+                <h1>アカウント作成</h1>
+                <a href="{% url 'signup' %}" class="mb-2">
+                <img src="{% static 'accounts/images/mark_r.jpg' %}" alt="アカウント作成" class="img-fluid" style="max-width: 200px;">
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center mt-5 my-4">
+                <h1>ログイン</h1>
+            </div>
+        </div>
+    </div>
+    <div class="row text-center">
+        <div class="col-4">
+            <a href="{% url 'login' %}">
+            <img src="{% static 'accounts/images/mark_r.jpg' %}" alt="サポーター" class="img-fluid" style="max-width: 200px">
+            </a>
+            <h3 class="mt-2">サポーター</h3>
+        </div>
+        <div class="col-4">
+            <a href="{% url 'login' %}">
+            <img src="{% static 'accounts/images/mark_y.jpg' %}" alt="クリエイター" class="img-fluid" style="max-width: 200px">
+            </a>
+            <h3 class="mt-2">クリエイター</h3>
+        </div>
+        <div class="col-4">
+            <a href="{% url 'login' %}">
+            <img src="{% static 'accounts/images/mark_g.jpg' %}" alt="伝統工芸従事者" class="img-fluid" style="max-width: 200px">
+            </a>
+            <h3 class="mt-2">伝統工芸従事者</h3>
+        </div>
+    </div>
+</body>
+</html>
